--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.1",
     "@tailwindcss/vite": "^4.0.17",
+    "framer-motion": "^12.6.3",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.487.0",
+    "mapbox-gl": "^3.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.4.1",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
